src/components/shifts/Shifts.css
.shifts-view {
    display:flex;
}

.shifts-left-panel {
    display:flex;
    flex-direction: column;
    border: 5px var(--darkest) solid;
    border-radius: 10px;
    flex-basis: 40%;
    margin: 15px;
    padding: 15px;
}

.shifts-right-panel {
    display:flex;
    flex-direction: column;
    border: 5px var(--darkest) solid;
    border-radius: 10px;
    flex-basis: 60%;
    margin: 15px;
    padding: 15px;
    align-items: center;
}

.shifts-right-panel > h2 {
    border: 3px var(--dark) solid;
    border-radius: 10px;
    padding: 10px;
    padding-left: 30px;
    padding-right: 30px;
    color: var(--darkest);
    font-size: 28px;
    margin: 8px;
}

.shifts-new-entry {
    display:flex;
    flex-direction: column;
    padding: 8px;
    flex-basis: 40%;
    border: 5px var(--darkest) solid;
    border-radius: 10px;
    margin: 15px;
    align-items: center;
}

.shifts-new-entry > h2 {
    color: var(--darkest);
    margin: 12px;
    border: 3px var(--dark) solid;
    border-radius: 10px;
    padding: 6px;
}

.shifts-date {
    align-self:center;
    border: 1px var(--accent) solid;
    margin-bottom: 10px;
    margin-top: 5px;
    font-size: 16px;
}

.shifts-employee-select {
    border: 1px var(--accent) solid;
    font-size: 15px;
    margin-top:10px;
    margin-bottom:10px;
}

.shifts-hours-label {
    margin-top: 15px;
    margin-bottom: 15px;
    text-decoration: underline;
    color: var(--darkest);
    font-size: 18px;
}

.shifts-hours-input {
    border: 1px var(--accent) solid;
    margin-left: 15px;
    max-width: 12%;
    padding-left: 5px;
    font-size: 18px;
    color: var(--darkest);
}

.shifts-new-btn {
    border: 2px var(--accent) solid;
    max-width: 30%;
    align-self: center;
    padding: 4px;
    color: var(--darkest);
    font-size: 17px;
    margin-top: 10px;
    background-color: var(--light);
    font-weight: 900;
}

.shifts-new-btn:hover {
    border: 2px var(--light) solid;
    color: var(--dark);
    background-color: var(--accent);
    font-weight: bold;
    box-shadow: 0px 0px 16px var(--accent)
}

.shifts-list {
    display:flex;
    flex-wrap:wrap;
    padding:0px;
}

